--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@
 body {
   margin: 0;
   font-family: system-ui, -apple-system, BlankMacSystemFont, "Times New Roman", sans-serif;
-  background: #f7f5f2;
-  color: #222;
+  background: #f5eee5;
+  color: #2b1b12;
 }
 
 .page-container {
@@ -122,3 +122,4 @@ body {
     grid-template-columns: 1fr;
   }
 }
+
