--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 body {
   margin: 0;
-  font-family: system-ui, -apple-system, BlankMacSystemFont, "Times New Roman", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Times New Roman", sans-serif;
   background: #f5eee5;
   color: #2b1b12;
 }
@@ -44,7 +44,7 @@ body {
 }
 
 .primary-btn:hover {
-  backgrounds: #ff945f;
+  background: #ff945f;
 }
 
 .secondary-btn {
@@ -122,4 +122,5 @@ body {
     grid-template-columns: 1fr;
   }
 }
+
 
