--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -58,6 +58,8 @@ body {
   color: #fff;
 }
 
+/*splash screen */
+
 .splash-container {
   min-height: 100vh;
   display: flex;
@@ -66,6 +68,22 @@ body {
   align-items: center;
   text-align: center;
   padding: 0 1.5rem;
+
+  background: url("../images/splash-bg.png") center/cover no-repeat;
+  position: relative;
+}
+
+.splash-container::before{
+  content: "";
+  position: absolute;
+  inset: 0;
+  background: rgba(245, 238, 229, 0.25);
+  z-index: 0;
+}
+
+.splash-container > * {
+  position: relative;
+  z-index: 1;
 }
 
 .splash-container h1 {
@@ -148,6 +166,8 @@ body {
   margin-bottom: 1rem;
 }
 
+/* Hero section */
+
 .hero { /* I wanna center the hero section so that with the cards it will look more balanced */
   text-align: center;
   padding: 4rem 1rem;
@@ -168,6 +188,7 @@ body {
 .hero .btn {
   margin-top: 0.5rem;
 }
+
 
 
 @media (max-width: 768px) {
