--- a/public/assets/css/recipe-cards.css
+++ b/public/assets/css/recipe-cards.css
@@ -21,7 +21,7 @@ body {
 .page-header {
   text-align: center;
   padding: 2rem 1rem;
-  color: #8a4b17;
+  color: #2b1b12;
   border-radius: 12px 12px 0 0;
   margin: -2rem -1rem 0 -1rem;
 }
