change background color

--- a/public/assets/css/auth.css
+++ b/public/assets/css/auth.css
@@ -8,7 +8,7 @@
 }
 
 .auth-card {
-  background: #fac170;
+  background: #f6ead7;
   width: 340px; /* narrow, tall card */
   padding: 2rem 1.7rem;
   border-radius: 24px; /* make this bigger for rounder edges */
